# chucknorris

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  REFACTORING_STEPS.md  WORKFLOW_REVIEW.md  config.example.json  coverage.json  coverage.lcov  prompt1-grok-unoptimized.txt  prompt1-optimized-claude.txt  prompt2-grok-unoptimized.txt  prompt2-optimized-claude.txt  prompt3-grok-unoptimized.txt  prompt3-optimized-claude.txt  prompt4-grok-unoptimized.txt  prompt4-optimized-claude.txt  pyproject.toml  requirements.txt  sources.txt  sources_backup.txt  sources_temp.txt  test_comment.py
.githooks/: githooks.py  hooks.py  pre-commit  pre-commit.ps1
.github/: copilot-instructions.md  dependabot.yml
.github/actions/project-benchmark/: action.yml
.github/actions/project-lint/: action.yml
.github/actions/project-setup/: action.yml
.github/actions/project-test/: action.yml
.github/instructions/: 00-01.copilot-instruction.md  00-02.python-version.instructions.md  01-01.copilot-tools.instructions.md  01-01.vscode-extensions.md  01-02.copilot-tools.instructions.md  01-02.execution.instructions.md  01-03.preferred-libraries.instructions.md  02-01.git.instructions.md  02-01.project-context.instructions.md  02-02.coding.instructions.md  02-02.github.instructions.md  02-03.testing.instructions.md  02-04.data-integrity.instructions.md  03-01.git.instructions.md  03-01.scripts.instructions.md  03-02.github.instructions.md  04-01.project.instructions.md  04-02.dependencies.instructions.md  04-03.coding.instructions.md  04-04.testing.instructions.md
.github/workflows/: ci.yml
download/: __init__.py  quotes.csv  scraper.py
githooks/: __init__.py  hooks.py
quotes/: __init__.py  generator.py  hooks.py
scraper/: __init__.py  config.py  fetcher.py  loader.py  parser.py  quotes.csv  quotes.db  scraper.py  scraper_old.py  sources.txt  storage.py  utils.py  validator.py
tests/: __init__.py  test_config.py  test_generator.py  test_generator_cli.py  test_scraper.py  test_scraper_cli.py  test_validator.py
tests/benchmark/: test_benchmark_quotes.py
