[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "chucknorris-quotes"
version = "1.0.0"
description = "A Python project to scrape and generate Chuck Norris quotes"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Justin Cranford"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: AGPL License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-benchmark>=5.2.3",
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "bandit>=1.8.6",
    "types-requests>=2.32.4.20250913",
]

[project.scripts]
# Console script to install repo-level git hooks and pre-commit hooks
install-hooks = "githooks.hooks:install"
dev-setup = "githooks.hooks:dev_setup"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=scraper",
    "--cov=quotes",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=93",
]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # Suppress ResourceWarnings from coverage.py instrumentation during bytecode disassembly
    # These warnings are harmless and occur when coverage instruments sqlite3 operations
    # during Python's disassembly process (dis.py). The connections are properly closed
    # in application code, but coverage creates temporary connections for instrumentation.
    "ignore::ResourceWarning",
]

[tool.black]
line-length = 200
target-version = ['py314']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 200
multi_line_output = 3

[tool.flake8]
max-line-length = 200
extend-ignore = ["E203", "W503"]
exclude = [
    "./venv",
    "./.venv",
    "./.git",
    "./.mypy_cache",
    "./.pytest_cache",
    "./htmlcov",
    "./__pycache__",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = ["scraper", "quotes"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/sqlite3.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "sqlite3",
    "import sqlite3",
    "from sqlite3",
]

[tool.node]
dependencies = [
    "nvm-windows>=1.2.2",
    "node>=24.11.1",
    "cspell>=9.0.0",
]
