# https://pypi.org/project/setuptools/ - Latest: 75.3.0 (2024-11-07)
# https://pypi.org/project/wheel/ - Latest: 0.44.0 (2024-08-04)
[build-system]
requires = ["setuptools>=75.3.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chucknorris-quotes"
version = "1.0.0"
description = "A Python project to scrape and generate Chuck Norris quotes"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Justin Cranford"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: AGPL License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

# https://pypi.org/project/requests/ - Latest: 2.32.3 (2024-05-29)
dependencies = [
    "requests>=2.32.3",
    # https://pypi.org/project/beautifulsoup4/ - Latest: 4.12.3 (2024-01-17)
    "beautifulsoup4>=4.12.3",
    # https://pypi.org/project/lxml/ - Latest: 5.3.0 (2024-08-23)
    "lxml>=5.3.0",
]

[tool.setuptools.packages.find]
include = ["scraper", "quotes", "githooks"]

[project.optional-dependencies]
dev = [
    # https://pypi.org/project/pytest/ - Latest: 8.3.3 (2024-09-09)
    "pytest>=8.3.3",
    # https://pypi.org/project/pytest-cov/ - Latest: 5.0.0 (2024-03-28)
    "pytest-cov>=5.0.0",
    # https://pypi.org/project/pytest-mock/ - Latest: 3.14.0 (2024-04-16)
    "pytest-mock>=3.14.0",
    # https://pypi.org/project/pytest-benchmark/ - Latest: 4.0.0 (2023-06-02)
    "pytest-benchmark>=4.0.0",
    # https://pypi.org/project/black/ - Latest: 24.10.0 (2024-10-04)
    "black>=24.10.0",
    # https://pypi.org/project/flake8/ - Latest: 7.1.1 (2024-08-05)
    "flake8>=7.1.1",
    # https://pypi.org/project/isort/ - Latest: 5.13.2 (2023-11-21)
    "isort>=5.13.2",
    # https://pypi.org/project/mypy/ - Latest: 1.13.0 (2024-10-15)
    "mypy>=1.13.0",
    # https://pypi.org/project/pre-commit/ - Latest: 4.0.1 (2024-10-22)
    "pre-commit>=4.0.1",
    # https://pypi.org/project/bandit/ - Latest: 1.7.10 (2024-09-19)
    "bandit>=1.7.10",
    # https://pypi.org/project/types-requests/ - Latest: 2.32.0.20241016 (2024-10-16)
    "types-requests>=2.32.0.20241016",
]

[project.scripts]
# Console script to install repo-level git hooks and pre-commit hooks
install-hooks = "githooks.hooks:install"
dev-setup = "githooks.hooks:dev_setup"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=scraper",
    "--cov=quotes",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",
]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # Suppress ResourceWarnings from coverage.py instrumentation during bytecode disassembly
    # These warnings are harmless and occur when coverage instruments sqlite3 operations
    # during Python's disassembly process (dis.py). The connections are properly closed
    # in application code, but coverage creates temporary connections for instrumentation.
    "ignore::ResourceWarning",
]

[tool.black]
line-length = 200
target-version = ['py314']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 200
multi_line_output = 3

[tool.flake8]
max-line-length = 200
extend-ignore = ["E203", "W503"]
exclude = [
    "./venv",
    "./.venv",
    "./.git",
    "./.mypy_cache",
    "./.pytest_cache",
    "./htmlcov",
    "./__pycache__",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = ["scraper", "quotes"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/sqlite3.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "sqlite3",
    "import sqlite3",
    "from sqlite3",
]

[tool.node]
dependencies = [
    "nvm-windows>=1.2.2",
    "node>=24.11.1",
    "cspell>=9.0.0",
]
