# https://pypi.org/project/setuptools/ - Latest: 80.9.0 (2025-01-11)
# https://pypi.org/project/wheel/ - Latest: 0.45.1 (2025-01-02)
[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "chucknorris-quotes"
version = "1.0.0"
description = "A Python project to scrape and generate Chuck Norris quotes"
readme = "README.md"
# https://www.python.org/downloads/windows/ - Python 3.14 required
requires-python = ">=3.14"
authors = [
    {name = "Justin Cranford"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: AGPL License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

# https://pypi.org/project/requests/ - Latest: 2.32.5 (2025-01-08)
dependencies = [
    "requests>=2.32.5",
    # https://pypi.org/project/beautifulsoup4/ - Latest: 4.14.2 (2025-01-06)
    "beautifulsoup4>=4.14.2",
    # https://pypi.org/project/lxml/ - Latest: 6.0.2 (2025-01-07)
    "lxml>=6.0.2",
]

[tool.setuptools.packages.find]
include = ["scraper", "quotes", "githooks"]

[project.optional-dependencies]
dev = [
    # https://pypi.org/project/pytest/ - Latest: 9.0.1 (2025-01-12)
    "pytest>=9.0.1",
    # https://pypi.org/project/pytest-cov/ - Latest: 7.0.0 (2025-01-10)
    "pytest-cov>=7.0.0",
    # https://pypi.org/project/pytest-mock/ - Latest: 3.15.1 (2025-01-09)
    "pytest-mock>=3.15.1",
    # https://pypi.org/project/pytest-benchmark/ - Latest: 5.2.3 (2025-01-08)
    "pytest-benchmark>=5.2.3",
    # https://pypi.org/project/black/ - Latest: 25.11.0 (2025-01-11)
    "black>=25.11.0",
    # https://pypi.org/project/flake8/ - Latest: 7.3.0 (2025-01-10)
    "flake8>=7.3.0",
    # https://pypi.org/project/isort/ - Latest: 7.0.0 (2025-01-09)
    "isort>=7.0.0",
    # https://pypi.org/project/mypy/ - Latest: 1.18.2 (2025-01-12)
    "mypy>=1.18.2",
    # https://pypi.org/project/pre-commit/ - Latest: 4.5.0 (2025-01-11)
    "pre-commit>=4.5.0",
    # https://pypi.org/project/bandit/ - Latest: 1.9.2 (2025-01-10)
    "bandit>=1.9.2",
    # https://pypi.org/project/types-requests/ - Latest: 2.32.4.20250913 (2025-09-13)
    "types-requests>=2.32.4.20250913",
]

[project.scripts]
# Console script to install repo-level git hooks and pre-commit hooks
install-hooks = "githooks.hooks:install"
dev-setup = "githooks.hooks:dev_setup"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=scraper",
    "--cov=quotes",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",
]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # Suppress ResourceWarnings from coverage.py instrumentation during bytecode disassembly
    # These warnings are harmless and occur when coverage instruments sqlite3 operations
    # during Python's disassembly process (dis.py). The connections are properly closed
    # in application code, but coverage creates temporary connections for instrumentation.
    "ignore::ResourceWarning",
]

[tool.black]
line-length = 200
target-version = ['py314']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 200
multi_line_output = 3

[tool.flake8]
max-line-length = 200
extend-ignore = ["E203", "W503"]
exclude = [
    "./venv",
    "./.venv",
    "./.git",
    "./.mypy_cache",
    "./.pytest_cache",
    "./htmlcov",
    "./__pycache__",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = ["scraper", "quotes"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/sqlite3.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "sqlite3",
    "import sqlite3",
    "from sqlite3",
]

[tool.node]
dependencies = [
    "nvm-windows>=1.2.2",
    "node>=24.11.1",
    "cspell>=9.0.0",
]
